# python-xcat3client

./: README.rst  requirements.txt  setup.cfg
tools/: xcat3.bash_completion
xcat3client/: __init__.py  client.py  exc.py  shell.py
xcat3client/common/: base.py  cliutils.py  http.py  i18n.py  utils.py
xcat3client/common/apiclient/: exception.py
xcat3client/v1/: client.py  network.py  network_shell.py  nic.py  nic_shell.py  node.py  node_shell.py  osimage.py  osimage_shell.py  passwd.py  passwd_shell.py  service.py  service_shell.py  shell.py
