[metadata]
name = python-xcat3client
summary = xCAT3 API Client Library
description-file = README.rst
author = xcat3
author-email = chenglch@cn.ibm.com
home-page = TO BE DONE
classifier =
    Environment :: xCAT
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages = xcat3client

[entry_points]
console_scripts =
    xcat3 = xcat3client.shell:main

[pbr]
autodoc_index_modules = True
warnerrors = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
